# minimal-animation-software

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CMakeProject1/: AppStyle.cpp  AppStyle.h  CMakeLists.txt  CanvasWidget.cpp  CanvasWidget.h  MainWindow.cpp  MainWindow.h  Stroke.h  main.cpp
